# sead_shape_shifter

./: .dockerignore  .gitignore  .pg_format  .pre-commit-config.yaml  .releaserc.json  .sqlfluff  AGENTS.md  CHANGELOG.md  MIGRATION_PLAN_CONFIG_TO_PROJECT.md  Makefile  PHASE2_COMPLETE.md  PHASE2_STATUS.md  README.md  RELEASE_NOTES_v0.1.0.md  RESUME_REPLACEMENTS_UI.md  SPRINT6.3_COMPLETE.md  SPRINT7.4_COMPLETE.md  SPRINT8.1_PROGRESS.md  SPRINT8.1_QUICKSTART.md  STEP2_SERVICE_LAYER_IMPLEMENTATION.md  TODO.md  VALUES_PROPERTY_VERIFICATION.md  apa.txt  debug_duplicate_column.py  docker-compose.yml  pyproject.toml  sead_shape_shifter.code-workspace  test_column_sanitization.py  test_sprint4_integration.sh  test_sprint5.2_features.sh  test_suggestions.py  test_unnest_validation.py
backend/: .gitignore  CODE_SMELLS_REPORT.md  ERROR_HANDLING_BEFORE_AFTER.md  ERROR_HANDLING_REFACTORING.md  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  error_tips.py  exceptions.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/clients/: __init__.py  reconciliation_client.py  sims_client.py
backend/app/core/: __init__.py  config.py  logging_config.py  operation_manager.py  state_manager.py  utility.py
backend/app/ingesters/: README.md  __init__.py  protocol.py  registry.py
backend/app/ingesters/sead/: __init__.py  ingester.py  metadata.py  policies.py  process.py  (+4 more)
backend/app/integrations/: __init__.py
backend/app/mappers/: __init__.py  config_mapper.py  data_source_mapper.py  entity_config_mapper.py  project_mapper.py  project_name_mapper.py  reconciliation_mapper.py  table_schema_mapper.py  validation_mapper.py
backend/app/middleware/: __init__.py  correlation.py
backend/app/models/: __init__.py  config.py  data_source.py  driver_schema.py  entity.py  entity_import.py  execute.py  filter_schema.py  fix.py  ingester.py  join_test.py  materialization.py  preview.py  project.py  query.py  reconciliation.py  shapeshift.py  sims.py  suggestion.py  task.py  test_run.py  validation.py
backend/app/scripts/: config.yml  ingest.py  ingest_config.example.json
backend/app/services/: __init__.py  auto_fix_service.py  column_introspection_service.py  config_service.py  data_source_service.py  dependency_service.py  directive_validator.py  documentation_service.py  entity_generator_service.py  entity_values_service.py  execute_service.py  ingester_service.py  layout_sidecar_manager.py  materialization_service.py  preview_service.py  project_service.py  query_service.py  reconciliation_service.py  schema_service.py  shapeshift_service.py  suggestion_service.py  task_list_sidecar_manager.py  task_service.py  test_run_service.py  type_mapping_service.py  validate_fk_service.py  validation_service.py  yaml_service.py
backend/app/utils/: README.md  __init__.py  caches.py  error_handlers.py  excel_utils.py  exceptions.py  file_path_resolver.py  fixed_schema.py  graph.py  reconciliation_migration.py  sql.py  yaml_utils.py
backend/app/validators/: data_validation_orchestrator.py  data_validators.py  target_model_validator.py
backend/tests/: conftest copy.py  conftest.py  debug_data_source_connections.py  demo_ui_env_vars.py  example_env_var_usage.py  manual_test_sead_env_vars.py  test_auto_fix_service.py  test_config_mapper.py  test_config_service.py  test_correlation_middleware.py  test_data_source.py  test_data_source_api.py  test_data_source_mapper.py  test_data_source_service.py  test_data_validators.py  test_debug_connections.py  test_dependency_service_validation.py  test_driver_schema.py  test_driver_schema_loader.py  test_env_var_preservation.py  test_env_var_resolution.py  test_error_handlers.py  test_exceptions.py  test_metadata.py  test_preview_service.py  test_preview_unlimited_rows.py  test_query_service.py  test_reconciliation_client.py  test_reconciliation_service.py  test_schema_class_based.py  test_schema_endpoints.py  test_schema_service.py  test_shapeshift_service.py  test_shapeshift_service_include_bug.py  test_state_manager.py  test_suggestions.py  test_type_mapping_service.py
backend/tests/api/: test_filters_endpoint.py  test_ingesters.py  test_merged_entity_api.py  test_preview_error_mapping.py
backend/tests/ingesters/: __init__.py  conftest.py  test_ingester_infrastructure.py
backend/tests/integration/: test_data_source_connections.py
backend/tests/mappers/: __init__.py  test_config_mapper.py  test_data_source_mapper.py  test_entity_config_mapper.py  test_project_mapper_file_path_integration.py  test_project_mapper_nested_models.py  test_reconciliation_mapper.py
backend/tests/models/: __init__.py  test_config.py  test_data_source.py  test_entity.py  test_validation.py
backend/tests/scripts/: __init__.py  test_ingest_cli.py
backend/tests/services/: test_auto_fix_service.py  test_column_introspection_service.py  test_config_service.py  test_config_service2.py  test_data_source_service.py  test_directive_validator.py  test_entity_generator_service.py  test_entity_values_service.py  test_file_manager.py  test_layout_sidecar_manager.py  test_materialization_service.py  test_preview_override_bug.py  test_preview_service.py  test_project_service.py  test_project_service2.py  test_project_service_boundary.py  test_project_utils.py  test_query_service.py  test_reconciliation_service.py  test_run_service.py  test_schema_service.py  test_shapeshift_service.py  test_state_management.py  test_suggestion_service.py  test_task_list_sidecar_manager.py  test_task_service.py  test_task_service_initialize.py  test_validate_fk_service.py  test_validation_service.py  test_yaml_foreign_keys_formatting.py  test_yaml_ordering.py  test_yaml_service.py  test_yaml_service_boundary.py
backend/tests/specifications/: test_materialization_spec.py
backend/tests/utils/: test_cache_invalidation.py  test_excel_utils.py  test_file_path_resolver.py  test_graph.py  test_sql.py  test_yaml_utils.py
backend/tests/validators/: __init__.py  test_data_validation_orchestrator.py  test_target_model_validator.py
(+1127 files in other folders)
