[project]
name = "shape-shifter"
version = "1.20.1"
description = "Declarative data transformation framework with optional web editor API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "jaydebeapi>=1.2.3",
    "jinja2>=3.1.6",
    "jpype1>=1.6.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg>=3.2.13",
    "pyaml>=25.7.0",
    "pyproj>=3.7.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    # Shared dependencies (used by both core and backend)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "networkx>=3.0",
    "ruamel.yaml>=0.18.0",
    "uvicorn>=0.38.0",
    "xxhash>=3.6.0",
    "httpx>=0.24.1,<1",
]

[project.optional-dependencies]
# Backend API dependencies (FastAPI + related)
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlparse>=0.5.0",
]
# Development dependencies
dev = [
    "pylint>=3.3.8",
    "ruff>=0.13.2",
    "black>=25.9.0",
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=0.22.0,<1",
    "pytest-cov>=4.1.0,<5",
    "vulture>=2.14",
]
# All dependencies (for full development setup)
all = [
    "shape-shifter[api,dev]",
]

[project.scripts]
# CLI entry points for easy command-line access
sead-ingest = "backend.app.scripts.ingest:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backend*", "ingesters*"]


[tool.ruff]
# Ruff = linter + (optional) formatter
target-version = "py313"
line-length = 140
output-format = "concise"

[tool.ruff.lint]
# Import checking rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "TID", # flake8-tidy-imports
]
exclude = [
    "__init__.py",
]

[tool.ruff.lint.flake8-tidy-imports]
# Prevent relative imports beyond current package
ban-relative-imports = "parents"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.format]
# Use Ruff's formatter (Black-compatible). Set to false if you prefer Black.
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0904",
    "R0903",
    "R0801",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-nested-blocks",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "global-variable-not-assigned",
    "logging-fstring-interpolation",
    "too-many-function-args",
    "too-many-locals",
    "protected-access",
    "f-string-without-interpolation",
    "unnecessary-ellipsis",
]

[tool.black]
line-length = 140
# target-version = ['py313']


[tool.pylint]
max-line-length = 140
max-args = 10

# Import sorting (handled by Ruff)
[tool.isort]
line_length = 142
# multi_line_output = 3
profile = "black"

# --------------------
# mypy (type checking)
# --------------------
[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true

# Loosen types in tests
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
warn_return_any = false

# --------------------
# pytest
# --------------------
[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests", "backend/tests"]
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
  "integration: marks tests that hit external services (e.g., Ollama, DB)",
  "debug: marks tests for debugging purposes (typically run manually)",
  "manual: marks tests requiring manual setup (e.g., real database)",
]
# python_files = "test_*.py" "*_test.py"
# Uncomment to see logs during test runs:
# log_cli = true
# log_cli_level = "INFO"

# --------------------
# coverage.py
# --------------------
[tool.coverage.run]
branch = true
source = ["src", "backend/app"]
omit = [
  "backend/tests/*",
  "tests/*",
  "backend/app/api/v1/endpoints/*",
  "src/configuration/*",
  "*/__init__.py",
  "*/venv/*",
  "*/.venv/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[dependency-groups]
dev = []
