# =============================================================================
# DEPRECATED - Use root pyproject.toml instead
# =============================================================================
# This file is kept for reference but the backend dependencies are now managed
# in the root pyproject.toml using optional extras.
#
# To install:
#   uv pip install -e ".[all]"     # Full development setup
#   uv pip install -e ".[api]"     # Core + API only
#   uv pip install -e ".[dev]"     # Core + dev tools
#
# To run backend:
#   make backend-run
#
# See: /pyproject.toml for the unified dependency management.
# =============================================================================

[project]
name = "shape-shifter-editor-backend"
version = "0.1.0"
description = "REST API for editing Shape Shifter YAML configurations (DEPRECATED: use root pyproject.toml)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Dependencies now managed in root pyproject.toml
    # This file is kept for backwards compatibility only
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Ruff = linter + (optional) formatter
target-version = "py313"
line-length = 140

# Import checking rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "TID", # flake8-tidy-imports
]

[tool.ruff.flake8-tidy-imports]
# Prevent relative imports beyond current package
ban-relative-imports = "parents"

[tool.ruff.format]
# Use Ruff's formatter (Black-compatible). Set to false if you prefer Black.
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0904",
    "R0903",
    "R0801",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-nested-blocks",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "global-variable-not-assigned",
    "logging-fstring-interpolation",
    "too-many-function-args",
    "too-many-locals"
]

[tool.black]
line-length = 140
# target-version = ['py313']


[tool.pylint]
max-line-length = 140
max-args = 10

# Import sorting (handled by Ruff)
[tool.isort]
line_length = 142
# multi_line_output = 3
profile = "black"

# Naming tweaks (optional)
[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod"]

# --------------------
# mypy (type checking)
# --------------------
[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true

# Loosen types in tests
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
warn_return_any = false

# --------------------
# pytest
# --------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

